--- a/currency_exchange.html
+++ b/currency_exchange.html
@@ -7,8 +7,26 @@
     <title>Document</title>
     <link rel="stylesheet" href="currency.css">
 </head>
-<body>
-    
-    <script src="currency_exchange.js"></script>
-</body>
+    <body>
+        <form name="country_select">
+            
+            <label for="country">Select country</label>
+            <select name="country" id="">
+                <option value="usa">America</option>
+                <option value="canada">Canada</option>
+                <option value="europe">Europe</option>
+                <option value="russia">Russia</option>
+                <option value="china">China</option>
+                <option value="australia">Australia</option>
+                <option value="japan">Japan</option>
+
+            </select>
+            <button id="select">Select</button>
+
+        </form>
+
+
+
+        <script src="currency_exchange.js"></script>
+    </body>
 </html>
