--- a/currency_exchange.html
+++ b/currency_exchange.html
@@ -11,7 +11,7 @@
         <form name="country_select">
             
             <label for="country">Select country</label>
-            <select name="country" id="">
+            <select name="country" id="country">
                 <option value="usa">America</option>
                 <option value="canada">Canada</option>
                 <option value="europe">Europe</option>
@@ -21,8 +21,13 @@
                 <option value="japan">Japan</option>
 
             </select>
-            <button id="select">Select</button>
-
+            <br>
+            <label for="amount">Amount(USD)</label>
+            <input type="text" name="amount" id="amount">
+            <br>
+            <p id="output"></p>
+            <p id="loss"></p>
+            <br>
         </form>
 
 
